<resources>
    <string name="app_name">myapp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">الرئيسية</string>
    <string name="menu_gallery">تسجيل الصوت</string>
    <string name="menu_slideshow">نصائح عامة</string>
    <string name="menu_galleryy">عن المبادرة</string>
    <string name="menu_slideshoww">عن الفريق </string>
    <string name="description">
        لتصبحي خبيرة بكيفية مساعدة مولودك على النوم، والتي تعتبر غاية كل الأمهات خاصة في الأشهر الأولى من الولادة، إليك 10 أفكار؛ اعملي بها لتساعدي طفلك وتعوديه أن يخلد للنوم براحة وبدون مشاكل، وكذلك أن لا يستيقظ بصورة متتالية أثناء الليل.
.</string>
    <string name="one">1. حاولي التقليص من العوامل المساعدة للنوم، مثلاً هز المولود إلى أن ينام أو وضعه في كرسي السيارة والسياقة في المدينة، إلى أن يغفو أو استخدام المصاصة. لا مانع من الاستعانة بهذه الأساليب في الأسابيع الأولى من الولادة، ولكن بعدها سيعتاد عليها المولود، ويطلبها كلما أراد النوم، حتى وإن استيقظ في الليل، فلن ينام مجدداً إلا إذا استعملت نفس الأسلوب.</string>
    <string name="two">2. جربي أساليب جديدة أثناء النهار لمساعدته وليس خلال فترة الليل، فمثلاً إذا أردت تدريبه على الاستغناء عن المصاصة أو عدم هزه للنوم، فافعلي ذلك خلال النهار عندما تكونين مفعمة بالطاقة ولديك القدرة على تحمل احتجاجه، بينما خلال الليل فسرعان ما ستفقدين عزيمتك بسبب التعب.</string>
    <string name="three">3. أثبتت الدراسات أن المواليد الصغار ينامون أفضل في العتمة، لذا احرصي أن تكون ستارة غرفة مولودك مبطنة بطبقة قماش تحجب أشعة الشمس؛ كي ينام لمدة أطول.</string>
    <string name="four">4. المواليد الصغار يتعلمون من التكرار، لذلك اجعلي نظاماً لطفلك تستمرين عليه؛ ليتعرف على أوقات النوم من خلاله ويتمهد له. مثلاً في المساء، الحمام، يتبعه أغنية تغنيها له، وأنت تلبسينه ملابس النوم؛ كي يربط هذه النغمات بوقت نومه.</string>
    <string name="five">5. إن كان مولودك في عمر ستة أشهر وأكثر، وكنت تقدمين له الفواكه والبقول، فغالباً هذه الأطعمة ستجعله مستيقظاً ومتيقظاً، وكذلك سيستيقظ مبكراً، بسبب حركة أمعائه. قدمي هذه الأطعمة في وقت الغداء، أما وجبته المسائية فلتكن غنية بالنشويات كالمعكرونة، الأرز، الخبز وكذلك الموز؛ كي يشعر بالشبع وينام لفترات أطول.</string>
    <string name="six">6. لا تقارني وضعك مع أمهات أخريات، فكل مولود يختلف عن غيره والمقارنة ستسبب لك ضغوطاً وإحباطاً.</string>
    <string name="seven">7. من عمر ستة أشهر وإن كان مولودك بوضع صحي جيد، ووزنه يزداد وفق عمره، فحاولي في هذه المرحلة التقليل من رضعات الليل، إن استيقظ فاتركيه لمدة 5 دقائق ليحاول أن يعود للنوم من دون تدخلك. إن لم يستقر، فعودي إليه وربتي على كتفه أو صدره بهدوء، وهمْس بصوت منخفض (شششششش). إن لم يجدِ الأمر فاحتضنيه لمدة 15 دقيقة كي يهدأ. إما إن فشلت جميع المحاولات فقدمي له الرضعة. هذه الطريقة ستمكنه من إعادة تنظيم ساعته. وتدريجياً سيهدأ ويستغني عن الرضعة.</string>
    <string name="eight">8. الموسيقى الهادئة فعالة جداً للمواليد الصغار، وتتوفر في الأسواق الأجهزة الخاصة، التي تصدر موسيقى هادئة، وتوضع في فراش الطفل، اختاري الذي يبعث ضوءاً خفيفاً والذي بإمكانك توقيته. أفضل الأصوات هي أصوات الطبيعة كصوت أمواج البحر، المطر، أو دقات القلب.</string>
    <string name="nine">9. المواليد يوصلون الرائحة بأشياء معينة، ولتساعدي مولودك على النوم، ضعي مثلاً بعض قطرات زيت زهرة البابونج أو الخزامى على منشفة صغيرة، أو قطعة قماش في غرفة المولود وقت النوم فهي ستساعد على الاسترخاء. وسيربط هذه الرائحة بوقت النوم.</string>
    <string name="ten">10. عندما يستقر طفلك، اسعي كي ينام 12 ساعة متواصلة، وأفضلها من الساعة 7 مساءً للساعة 7 صباحاً. احرصي على عتمة الغرفة والهدوء، وإن استيقظ للرضاعة أو لكونه منزعجاً فتعاملي مع الأمر بهدوء تام وباختصار. عند الصباح، افتحي الستارة وابتسمي وداعبيه؛ كي يعرف وقت الصباح واليوم قد بدأ.</string>
    <string name="two22">تحار أغلب الأمهات وبالأخص الجدد في التعامل مع الطفل كثير البكاء، تكشف الدكتورة «إيمان عبد العظيم «استشاري الأطفال، أسباب كثرة بكاء الطفل، يبكي جميع الأطفال عندما يعانون من الجوع أو التعب أو عدم الراحة أو المرض أو الألم. في بعض الأحيان يبكون لأنهم بحاجة إلى المودة. قد يبكي أيضاً الأطفال الصغار والأكبر سناً بسبب الإحباط أو الحزن أو الغضب، على سبيل المثال، ولكن قد يكون من الصعب في بعض الأحيان معرفة ما يحتاجه طفلك.لذلك عندما يبكي طفلك، ابدئي بالتحقق من أنه غير مريض أو مصاب. إذا لم تكوني متأكدة، فحددي موعداً مع طبيبك أو اتصلي بممرضة صحة الطفل والأسرة، إذا كان طفلك يبكي لسبب آخر، فهناك الكثير من الأشياء التي يمكنك القيام بها للمساعدةيولد الأطفال مع القدرة على البكاء، البكاء هو طريقهم الرئيسي للتواصل، نحو 1 من كل 10 أطفال يبكي كثيراً، «الكثير» يعني أكثر من ثلاث ساعات في اليوم. يميل الأطفال الذين تقل أعمارهم عن 12 شهراً إلى البكاء في وقت متأخر من بعد الظهر وفي المساء، قد يكون ذلك مرهقاً للغاية، خاصة إذا كنت مشغولة بأشياء مثل صنع العشاء أو إعطاء الأطفال الأكبر سناً حماماً، سوف تمر هذه المرحلة من البكاء الشديد، ربما في وقت أقرب مما تعتقدين.</string>
    <string name="two222">فيما يلي بعض الإستراتيجيات في التعامل مع الطفل كثير البكاء</string>
    <string name="two23">ضعي طفلك في عربة أطفال أو لعبة صغيرة واذهبي للنزهة، يمكنك حتى أن تقودي سيارة، طالما أنك لست متعبة للغاية! حتى لو لم يتوقف طفلك عن البكاء، فمن الأسهل في بعض الأحيان رفعه أثناء التنقل.

إذا كنت تشعرين بالإرهاق، ضعي طفلك في مكان آمن وخذي قسطاً من الراحة لمدة خمس دقائق، إن ترك طفلك يبكي لبضع دقائق لن يؤذيه، وقد يساعدك ذلك في السيطرة على الأشياء.

من الجيد دائماً طلب المساعدة. تعتبر ممرضة صحة الطفل والأسرة أو الطبيب العام أماكن جيدة للبدء .</string>
    <string name="yak">اعتادت الأمهات على مر الزمن على استخدام اللهاية (السكاتة. أو الرضعة الكذابة) للمولود لأنها تشغله عن طلب ثدي الأم كل الوقت وأطلقت عليه الجدات اسم" الأم الثانية" لأنهه تهدئه وتوقفه عن البكاء المستمر ما يساعد الأم على القيام بأعمال البيت وعدم البقاء في حالة إرضاع طول الوقت، فالمولود أساساً يكون بحاجة لمص ثدي الأم ليس بدافع الجوع دائماً ولكن لدوافع نفسية كثيرة منها الشعور بالأمان.
وعلى ذلك.. ما بين مؤيد لاستخدامها ومعارض من الأطباء والأمهات التقت "سيدتي وطفلك" بالدكتور إيهاب الإمام أخصائي طب الأطفال وحديثي الولادة إلى أن اللهاية البلاستيكية، التي تستخدم للمولود منذ الولادة فهي لها ميزة وحيدة في تهدئة الطفل ومساعدته في النوم وفي بداية مرحلة التسنين تستخدم لتخفيف الألم وقد تم حديثاً الربط بين استخدام اللهايه ومنع حدوث متلازمة موت المهد.</string>
    <string name="du">العيوب أو الأضرار:</string>
    <string name="se">_ هناك علاقه وطيدة بين استخدام اللهاية وفطام الطفل من الرضاعة الطبيعية في الأشهر الأولى من حياته حيث إن هناك دراسات كثيرة تتكلم عن أن مصّ اللهاية بدلاً من الثدي يؤدي إلى تقليل تحفيز الثدي لإفراز هرمون البرولاكتين، ما ينتج عنه انخفاض في نسبة تكوين اللبن الحليب.</string>
    <string name="chwar">_استخدام اللهاية بكثره يؤدي إلى إرهاق فكّي المولود فيؤثر على قدرته في الرضاعة، والتي ستؤثر بالتالي على تكوين اللبن في ثدي الأم.</string>
    <string name="peng">_لقد تم ربط استخدام اللهاية بصفة يومية بالتوقف عن الرضاعة الطبيعية قبل بلوغه عمر 6 أشهر.وقد حذرت منظمة اليونيسيف تحذيراً شديد اللهجة من استخدام اللهاية مع الرضاعة الطبيعية.
</string>
    <string name="shash">_الربط المباشر بين اللهاية وحدوث اضطرابات للجهاز الهضمي للمولود مثل الانتفاخ الشديد والمغص وحدوث قيء إو إسهال
</string>
    <string name="hawt">_اضطراب السلوك مثل تأخر الكلام وبالأخص مع الاستمرار علي استخدامها فيما بعد سن السنة، فهي لاتشجع المواليد على تعلم الكلام ولا تشجع على إجراء الحوار وهذا ما يحتاجونه للتعلم.استخدام اللهاية لفترات طويله يؤدي إلى حدوث مشاكل في نمو الأسنان وتطورها.</string>
    <string name="hasht">_الربط بين التهابات الأذن الوسطى واستخدام اللهايه حيث انها تزيد فرصة دخول عدوى مباشره لقناة "استاكيوس" فتؤدي إلى إصابات متتكره بالتهاب الأذن.</string>
    <string name="four1">تشعر الأم بالقلق حين يسيل اللعاب بإستمرار من فم مولودها، وحين يكبر قليلاً فهي تضع فوطة صغيرة وتربطها على صدره أو تشبكها بدبوس لكي لا يبلل ملابسه، وكذلك لكي تستطيع أن تمسح لعاب المولود باستمرار، وكي يقوم من حولها بهذه المهمة في حال غيابها، ولكن الطب الحديث يرى أن لعاب المولود ليس ضاراً دائماً، بل له فوائد ويمكن أن تتعرفي عليها من خلال الدكتور محمد أبو داوود، إختصاصي طب الأطفال وحديثي الولادة كالآتي.
</string>
    <string name="four2">ما هي فوائد سيلان اللعاب من فم المولود؟</string>
    <string name="four3">يفيد اللعاب في طرد الميكروبات والجراثيم من فم وحلق المولود.

ويفيد اللعاب في تسهيل بلع الطعام عندما يتم إدخال الطعام الصلب للرضيع.

ويدل اللعاب على تطور الجهاز الهضمي للمولود بحيث أنه يصبح يتقبل الحليب الخارجي سواء حليب الأم، أو الحليب الصناعي.

ويدل اللعاب على أن المولود قد أصبح مستعداً لمرحلة التسنين.

يبدأ اللعاب في الزيادة في الشهر الثالث من عمر المولود، ولذلك يجب ألا تنزعج الأم من زيادته لأنه سوف يدل على نمو طفلها السليم، وبأنه يتدرج في مرحلة نموه بشكل صحيح مثل باقي الأطفال.

سبلان لعاب الرضيع مع وضعه لإصبعه في فمه يدل على أنه يشعر بالجوع، فهذه طريقة لكي تعرف الأم أن عليها سد جوع رضيعها.
</string>
    <string name="four4">أسباب سيلان اللعاب من الفم أثناء النوم</string>
    <string name="four5">تنفس طفلك من فمه أثناء النوم مما يؤدي إلى سيلان اللعاب أثناء النوم، ويجب البحث عن أسباب ذلك فقد يكون الطفل يعاني من وجود لحمية في الأنف.</string>
    <string name="four6">استرخاء عضلات جسم الطفل أثناء النوم؛ مما يؤدي لسيلان اللعاب؛ لأنه لا يبتلعه كما يحدث حين يكون مستيقظاً، وبالتالي لا يوجد طريقة لتصريف اللعاب وابتلاعه.</string>
    <string name="four7">إفراط طفلك في تناول الحمضيات قبل النوم.

تناول بعض الأدوية المحفزة لإفراز اللعاب.

نوم الطفل غير المريح مثل أن يكون صدغه على حافة الوسادة.
</string>
    <string name="four8">متى يكون سيلان اللعاب من فم الرضيع مقلقاً؟</string>
    <string name="four9">يمكن أن يكون سيلان اللعاب من فم الرضيع لدرجة كبيرة بحيث يتجمع في سقف حلقه وفمه، مما يهدده بالإختناق.
</string>
    <string name="four10">عندما يصبح الرضيع غير قادراً على النوم والرضاعة وتناول الطعام الصلب بعد عمر ستة أشهر بشكل طبيعي.</string>
    <string name="four11">في حال معاناة الرضيع من الإحمرار والإحتقان في الفم والحلق.

سيلان اللعاب بكثرة مع إرتفاع درجة حرارة الطفل.
</string>
    <string name="four12">معاناة الرضيع من الإرتجاع المريئي، ففي هذه الحالة يشعر الرضيع بحرقة في المريء فيسيل اللعاب لكي يخفف من شعوره بالحرقة.</string>
    <string name="four13">وفي حالات معينة قد يكون سيلان اللعاب دليلاً على إصابة الرضيع بحساسية الأنف، فيكون الأنف مسدوداً ويضطر لفتح فمه لكي يتنفس فيسيل اللعاب بكثرة.</string>
    <string name="five1">تدليك المولود ليس أمراً لتدليله فقط، هو حاجة تستفيدين منها أنت وهو؛ لتقوبة روابطكما ومساعدته على النوم، وفوائد أخرى تابعيها معنا.</string>
    <string name="five2">1. ممتاز لإقامة الروابط معه</string>
    <string name="five3">يمكنك تدليك طفلك برفق منذ الولادة، وقضاء هذا الوقت معه وحدكما سيساعدكما على التعرف على بعضكما بعضًا.
2. قد يساعده على النوم
خصصي حوالي نصف ساعة، فالكثير من الأمهات يدلكن أطفالهن قبل موعد النوم، لأن هذا يساعد الطفل على الاسترخاء، ولكن طالما أنه يستمتع به، فإن أي وقت سيكون جيدًا باستثناء بعد تناول الوجبة أو الحليب، لأنه يجب أن تهدأ معدته.</string>
    <string name="five4">3. كيف تبدئين؟</string>
    <string name="five5">انزعي ملابسه وضعيه على منشفة ناعمة ودلكيه، يجب أيضًا أن تكون يداكِ دافئتين، وستحتاجين إلى زيت أو لوشن، وعلى الرغم من أنه يمكنك تعلم أساليب معينة، إلا أن المهم هو أن يكون الضغط خفيفًا لكي لا ينزعج، أغلقي عينيك واضغطي بأطراف الأصابع على جفنيك، هذا هو مستوى الضغط المناسب لطفلك.</string>
    <string name="five6">4. تعلمي الأسلوب</string>
    <string name="five7">افركي صدغيه وأذنيه بحركة دائرية لطيفة، مرري أصابعك بخفة على حاجبيه وجفنيه وحول فمه، انتقلي إلى كتفيه وصدره، مع التدليك بحركات دائرية، ثم دلكي الساقين والقدمين، بحيث تضربين ضربات خفيفة على كل فخذ بكامل يدك نزولاً إلى الأسفل، وحين تصلين لقدميه، اسحبي بلطف شديد أصابع قدميه، ثم افركي أعلى كل قدم بإبهامك، وحين تنتهين سيشعر كل منكما بالهدوء والسكينة.
</string>
    <string name="five8">5. توقفي إذا لم يكن سعيدًا</string>
    <string name="five9">إذا لم يبد أن طفلك يستمتع بالتدليك، توقفي.. هل الغرفة دافئة بما فيه الكفاية؟ هل يشعر الطفل بالراحة؟ إذا كان لايزال لا يشعر بالرغبة في التدليك، جربي ثانية في وقت آخر.</string>
</resources>