<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidDomInspection -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".one">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="330dp"
                android:layout_height="196dp"
                android:layout_marginLeft="7dp"
                android:layout_marginRight="15dp"
                android:layout_weight="66"
                android:gravity="center"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/sleep" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="30dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/description"
                android:textColor="#070707"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="@id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.95" />

            <TextView
                android:id="@+id/one1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/one"
                android:textColor="#070707"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/two"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/two"
                android:textColor="#070707"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/three"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/three"
                android:textColor="#070707"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/four"
                android:textColor="#070707"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/five"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/five"
                android:textColor="#070707"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/six"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/six"
                android:textColor="#070707"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/seven"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/seven"
                android:textColor="#070707"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/eight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/eight"
                android:textColor="#070707"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/nine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/nine"
                android:textColor="#070707"
                android:textSize="18sp" />
            <TextView
                android:id="@+id/ten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginTop="15dp"
                android:layout_marginRight="15dp"
                android:layout_weight="400"
                android:fontFamily="@font/acme"
                android:gravity="center"
                android:text="@string/ten"
                android:textColor="#070707"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>